Added test files and schema

--- a/aaron_notebook.ipynb
+++ b/aaron_notebook.ipynb
@@ -4479,6 +4479,49 @@
     "# Export the DataFrame as a CSV file. \n",
     "contact_info_df_final.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cf_id             1000\n",
+       "contact_id        1000\n",
+       "company_name       974\n",
+       "description        999\n",
+       "goal               447\n",
+       "pledged            964\n",
+       "outcome              4\n",
+       "backers_count      589\n",
+       "country              7\n",
+       "currency             7\n",
+       "launched_date      486\n",
+       "end_date           360\n",
+       "category_id          9\n",
+       "subcategory_id      24\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check stats on campaign csv\n",
+    "campaign_df = pd.read_csv(\"test/Resources/campaign.csv\")\n",
+    "campaign_df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
