--- a/ashok_notebook.ipynb
+++ b/ashok_notebook.ipynb
@@ -1282,7 +1282,9 @@
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df = campaign_df.rename(columns={'blurb': 'description', 'launched_at': 'launched_date', 'deadline': 'end_date'})\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -1471,7 +1473,9 @@
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n",
+    "campaign_df[[\"goal\",\"pledged\"]] = campaign_df[[\"goal\",\"pledged\"]].astype(float)\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -1508,7 +1512,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes\n"
+    "# Check the datatypes\n",
+    "campaign_df.dtypes"
    ]
   },
   {
@@ -1698,7 +1703,10 @@
    ],
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
-    "from datetime import datetime as dt\n"
+    "from datetime import datetime as dt\n",
+    "campaign_df[\"launched_date\"] = pd.to_datetime(campaign_df[\"launched_date\"], unit='s').dt.strftime('%Y-%m-%d') \n",
+    "campaign_df[\"end_date\"] = pd.to_datetime(campaign_df[\"end_date\"], unit='s').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -2045,8 +2053,7 @@
    "source": [
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
-    "\n",
-    "\n",
+    "campaign_merged_df = campaign_df.merge(category_df, on='category', how='left').merge(subcategory_df, on='subcategory', how='left')\n",
     "campaign_merged_df.tail(10)"
    ]
   },
@@ -2218,7 +2225,9 @@
     }
    ],
    "source": [
-    "# Drop unwanted columns\n"
+    "# Drop unwanted columns\n",
+    "campaign_cleaned = campaign_merged_df.drop(['staff_pick', 'spotlight', 'category & sub-category','category', 'subcategory'], axis=1)\n",
+    "campaign_cleaned.head()"
    ]
   },
   {
@@ -3700,7 +3709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
